[gd_scene load_steps=7 format=3 uid="uid://symtsri6e0xp"]

[ext_resource type="Texture2D" uid="uid://cevjfw117amb5" path="res://Assets/background/rocks_2.png" id="1_iukft"]
[ext_resource type="Script" uid="uid://gri4d8t3bv05" path="res://Scenes/game.gd" id="1_kldst"]
[ext_resource type="PackedScene" uid="uid://bjaruxkgkssu5" path="res://Scenes/ScrollingBg/ScrollingBg.tscn" id="2_7lihs"]
[ext_resource type="PackedScene" uid="uid://d6w2lskq80qv" path="res://Scenes/Tappy/Tappy.tscn" id="2_gl6un"]
[ext_resource type="PackedScene" uid="uid://cai1x7vw634qk" path="res://Scenes/Barrier/barrier.tscn" id="3_j5yw3"]
[ext_resource type="PackedScene" uid="uid://xmypda70nyde" path="res://Scenes/GameUI/GameUi.tscn" id="5_b2bpf"]

[node name="Game" type="Node"]
script = ExtResource("1_kldst")

[node name="ScrollingBG" parent="." instance=ExtResource("2_7lihs")]
scale = Vector2(0.79, 0.79)

[node name="Rocks2" type="Sprite2D" parent="."]
visible = false
position = Vector2(960, 313)
texture = ExtResource("1_iukft")

[node name="Tappy" parent="." instance=ExtResource("2_gl6un")]
position = Vector2(62, 393)

[node name="Barrier" parent="." instance=ExtResource("3_j5yw3")]

[node name="PipesHolder" type="Node" parent="."]

[node name="UpperSpawn" type="Marker2D" parent="."]
position = Vector2(530, 280)

[node name="LowerSpawn" type="Marker2D" parent="."]
position = Vector2(530, 550)

[node name="SpawnTimer" type="Timer" parent="."]
wait_time = 2.0
autostart = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="GameUI" parent="CanvasLayer" instance=ExtResource("5_b2bpf")]

[connection signal="timeout" from="SpawnTimer" to="." method="_on_spawn_timer_timeout"]
